[tool.poetry]
name = "anorum"
version = "0.1.0"
description = ""
authors = ["Archie Wheeler <archiewheeler@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
